--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,20 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#container{
+    width: 80%;
+    height: 500px;
+    background-color: red;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+#container h1{
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+}
