--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,18 @@ body{
     height: 500px;
     background-color: red;
     margin: 20px auto;
-    padding: 60px;
+    padding: 15px 60px;
 }
 
-#container h1{
+ h1, h2{
     color: white;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 15px;
+    margin: 15px 0;
+}
+
+h3{
+    text-transform: uppercase;
 }
 
 #box{
@@ -53,4 +57,9 @@ body{
     font-size: 25px;
     margin-right: 20px;
     color: red;
+}
+
+#biglietto{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
