--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,11 @@ h3{
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
+
+.hidden{
+    display: none;
+}
+
+.show{
+    display: block;
+}
