--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ h3{
 #biglietto{
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    padding: 10px;
+    background-color: lightgray;
 }
 
 .hidden{
